refactor: transfer, topup query repo
